# RECIPE_AGENT

./: .gitattributes  .gitignore  AGENTIC_RECIPE_SEARCH_IMPLEMENTATION_SUMMARY.md  COMPLETE_ENHANCEMENT_SUMMARY.md  DATA_EXTRACTOR_ENHANCEMENT.md  FEATURE_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  QDRANT_INTEGRATION_COMPLETE.md  README.md  REINDEXING_GUIDE.md  allfileshas.txt  app-compose.yml  check_proxy_setup.sh  email_erklärung_similarity_map.txt  enable-mde.sh  qdrant_recipes_export.json  recipe.ipynb  requirements.txt  time_reporting_tasks.txt
app/backend/ai-analyzer/: AGENTIC_RECIPE_SEARCH_README.md  README.md  main.py  pyproject.toml  requirements.txt
app/backend/ai-analyzer/ai_analyzer/: agent_manager.py  agents.py  api.py  cache_manager.py  config.py  data_import_postgresql.py  data_pipeline.py  database_agent_postgresql.py  fetch_data_from_api.py  flatten_zip.py  main.py  make_openai_call.py  make_openai_call_df.py  tenant_manager.py  utils.py
app/backend/ai-analyzer/ai_analyzer/agents/: __init__.py  agent_manager.py  base.py  data_extractor_router.py  database_inspector.py  factory.py  initial_questions.py  question_generator.py  (+8 more)
app/backend/ai-analyzer/data/: df__2024-10-23.csv  df__2024-12-17.csv  df_company__2024-10-22.csv  df_company__2024-10-23.csv  df_company__2024-10-25.csv  df_company__2024-11-18.csv  df_company__2024-12-16.csv  df_company__2024-12-25.csv  df_company__2025-01-16.csv
app/backend/ai-analyzer/examples/: agentic_recipe_search_demo.py
app/backend/ai-analyzer/prompt_template/: prompt_template_sentiment_topic_V1.txt
(+255 files in other folders)
